--- a/web/static/index.html
+++ b/web/static/index.html
@@ -7,7 +7,7 @@
     <title>CLONEBOT</title>
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23fdba74' stroke-width='2'><circle cx='12' cy='12' r='10'/><path d='M8 14s1.5 2 4 2 4-2 4-2'/><line x1='9' y1='9' x2='9.01' y2='9'/><line x1='15' y1='9' x2='15.01' y2='9'/></svg>">
-    <link rel="stylesheet" href="/style.css?v=26">
+    <link rel="stylesheet" href="/style.css?v=27">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css">
 </head>
 
@@ -37,27 +37,27 @@
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M21 15a2 2 0 01-2 2H7l-4 4V5a2 2 0 012-2h14a2 2 0 012 2z" />
                     </svg>
-                    <span>Новый чат</span>
+                    <span>New chat</span>
                 </div>
                 <div class="nav-item" data-nav="projects" onclick="navigateToProjects()">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M22 19a2 2 0 01-2 2H4a2 2 0 01-2-2V5a2 2 0 012-2h5l2 3h9a2 2 0 012 2z" />
                     </svg>
-                    <span>Проекты</span>
+                    <span>Projects</span>
                 </div>
             </nav>
 
             <div class="nav-divider"></div>
 
             <div class="sidebar-section">
-                <div class="sidebar-section-title">Чаты</div>
+                <div class="sidebar-section-title">Chats</div>
                 <div id="sidebarChats"></div>
             </div>
 
             <div class="nav-divider"></div>
 
             <div class="sidebar-section">
-                <div class="sidebar-section-title">Проекты</div>
+                <div class="sidebar-section-title">Projects</div>
                 <div id="sidebarProjects"></div>
             </div>
 
@@ -548,8 +548,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-bash.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-sql.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-markdown.min.js"></script>
-    <script src="/app.js?v=32"></script>
-    <script src="/projects.js?v=25"></script>
+    <script src="/app.js?v=33"></script>
+    <script src="/projects.js?v=26"></script>
 </body>
 
 </html>
